# llama-scale

./: .bumpversion.cfg  .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.yaml  install.sh
.github/workflows/: release.yml
assets/: logo.xcf
guides/: README.md  getting-started-debian-ubuntu.md  getting-started-docker.md  getting-started-kubernetes.md  getting-started-macos.md  getting-started-mikrotik.md  getting-started-proxmox.md  getting-started-redhat-fedora.md
npm/: package.json
packaging/debian/: build-deb.sh  config.yaml  config.yaml.default  llama-scale.service  postinst  prerm
packaging/npm/: README.md  package.json
packaging/rpm/: build-rpm.sh  llama-scale.spec
src/: access_log.rs  auth.rs  config.rs  error.rs  health.rs  main.rs  metrics.rs  models.rs  proxy.rs  routing.rs  state.rs
