[package]
name = "llama-scale"
version = "1.0.5"
edition = "2021"
description = "A Rust-based OpenAI-compatible LLM router with session affinity and least-connections load balancing."
license = "MIT"

[[bin]]
name = "llama-scale"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.11"
moka = { version = "0.12", features = ["sync"] }
arc-swap = "1"
tower-http = { version = "0.7", features = ["cors"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
url = "2"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
